gallery build script working

--- a/lib/galleryinfo.html
+++ b/lib/galleryinfo.html
@@ -1,5 +1,5 @@
-<div class="contentdiv">
-  <img class="logoimage" src="images/SoulflyerPhotos.png">
-  <p>Some test information</p>
-  <img class="sampleimage" src="images/Saigon.jpg">
+<img class="samplepic" src="http://soulflyer.com/photos/medium/2014/05/01-Deeper/DIW_0389.jpg">
+<div class="textpanel">
+  <p>Blah blah blah blah blah blah blah blah blah blah</p>
 </div>
+<h2>TEst</h2>
