--- a/lib/gallery-info.html
+++ b/lib/gallery-info.html
@@ -4,9 +4,15 @@ It will appear inside a div class="galleryinfo" beneath the header banner
 samplepic and textpanel are defined in the css file contentslider.css  so
 that the pic will fill most of the available space with textpanel on the right
 -->
-<img class="samplepic" src="http://soulflyer.com/photos/medium/2014/05/01-Deeper/DIW_0389.jpg">
+<img class="samplepic" src="http://soulflyer.com/photos/medium/2014/03/19-Snorkelling/DIW_4224_stack.jpg">
 <div class="textpanel">
-  <h2>Heaser</h2>
-  <p>Blah blah blah blah blah blah blah blah blah blah</p>
+
+  <!-- Gallery title goes here -->
+  <h2>A selection of pictures</h2>
+
+  <!-- Description of the gallery goes here -->
+  <p>A gallery of pictures from Soulflyer Photos.</p>
 </div>
-<h2>TEst</h2>
+
+<!--Caption for the sample pic goes here -->
+<h2></h2>
